# simple-autonomous-robot-ros2

./: LICENSE  README.md
ros2_ws/src/: .gitignore  package.xml  setup.cfg  setup.py
ros2_ws/src/config/: controller_params.yaml  lidar_params.yaml
ros2_ws/src/launch/: robot_launch.py
ros2_ws/src/resource/: simple_autonomous_robot
ros2_ws/src/simple_autonomous_robot/: lidar_sensor.py  movement.py  robot_controller.py
